<resources>
    <string name="app_name">NewApppp</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="user_name">Иван Петров</string>
    <string name="about_me">Стремящийся быть лучше</string>

    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="good_habits_title">Хорошие привычки</string>
    <string name="bad_habits_title">Плохие привычки</string>

    <string name="add_new_habit_button">Добавить новую привычку</string>
    <string name="button_to_add">Button to add habit</string>

    <string name="title_of_habit">Название привычки</string>
    <string name="habit_description">Описание</string>
    <string name="select_the_priority">Выберите приоритет</string>
    <string name="choose_the_type">Выберите тип</string>

    <string name="bad_habit">Вредная</string>
    <string name="good_habit">Полезная</string>

    <string name="frequency_doing_habit">Частота</string>
    <string name="execution_frequency">Периодичность выполнения</string>

    <string name="save_string">Сохранить</string>
    <string name="delete_string">Удалить</string>

    <string name="something">Something</string>

    <string name="color_choose_text">Выберите цвет</string>

    <string name="fill_the_line">Пожалуйста, заполните все поля и выберете значения</string>
    <string name="times_left_for_bad_habit">Можете выполнить еще %1$d раз</string>
    <string name="stop_doing_it">Хватит это делать</string>
    <string name="times_left_for_good_habit">Стоит выполнить еще %1$d раз</string>
    <string name="you_are_breathtaking">You are breathtaking!</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="delete_problem">
        Не удалось удалить привычку. Возникли проблемы с подключением к Интернету</string>
    <string name="delete_error">Произошла ошибка при попытке удаления. Пожалуйста попробуйте позже</string>
    <string name="error_with_sending_habit_to_server">
        Пожалуйста, попробуйте позже. Возникли проблемы с отправкой хобби на сервер</string>
    <string name="fill_the_filter_line">"Пожалуйста, укажите фильтрацию"</string>

    <string name="title">title</string>
    <string name="priority">priority</string>
    <string name="type">type</string>
    <string name="creation_date">Date of creation</string>
    <string name="color_string">Цвет</string>
    <string name="info_about_app">О приложении</string>
    <string name="info_about_app_icon_string">Иконка "О приложении"</string>
    <string name="home_page_title">Главная</string>
    <string name="home_page_title_icon_string">Иконка "Главная"</string>
    <string name="icon_of_the_app_title">Иконка приложения</string>
    <string name="achiever_title">Приложение для создания хобби \'Достигатор\'</string>
    <string name="version_1_0">Версия 1.0</string>
    <string name="developers_text_title">Разработчики</string>
    <string name="developer_one_name">Сахан</string>
    <string name="developer_two_name">Палкан</string>
    <string name="redactor_title">Редактор</string>

    <string name="empty_string"/>

    <string name="user_name_string">Имя пользователя</string>
    <string name="about_me_string">Обо мне</string>
    <string name="profile_description_string">Фото профиля</string>
    <string name="habits_string">Привычки</string>

    <string name="color_choose_title">Выбор цвета</string>
    <string name="filter_title">Фильрация</string>
    <string name="calendar_with_dates">Календарь с отмеченными днями</string>

    <string name="view_pager_title">Фильтр хобби</string>

    <string name="find_habit_by_name_icon">Иконка найти по названию</string>
    <string name="find_habit_by_priority_icon">Иконка найти по приоритету</string>

    <string name="count_choose_ui">выберите период</string>
    <string name="count_week_ui">неделю</string>
    <string name="count_month_ui">месяц</string>
    <string name="count_year_ui">год</string>

    <string name="find_habit_by_name_string">Поиск по названию</string>
    <string name="find_habit_by_priority_string">Поиск по приоритету</string>

    <string name="done_dates_adapter">Выполнено дней: %1$d</string>
    <string name="performance_standard_adapter">%1$d раз(а) в %2$s</string>

    <string name="filter_button_string">Фильтровать</string>
    <string name="cancel_filter_button">Отменить</string>
    <string name="filters_string">Фильтры</string>
    <string name="edit_string">Редактировать</string>
    <string name="mark_day_string">Отметить день</string>
    <string name="choose_the_date_string">Выберите дату</string>
    <string name="checkmark_string">галка</string>

    <string name="priority_choose">Приоритет</string>
    <string name="priority_low">Низкий</string>
    <string name="priority_medium">Средний</string>
    <string name="priority_high">Высокий</string>

    <string name="period_string">Период</string>
    <string name="priority_string">Приоритет</string>

    <string-array name="priority_array_string">
        <item>Низкий</item>
        <item>Средний</item>
        <item>Высокий</item>
        <item>Выберите приоритет</item>
    </string-array>

    <string-array name="count_array_string">
        <item>Неделя</item>
        <item>Месяц</item>
        <item>Год</item>
        <item>Выберите период</item>
    </string-array>
</resources>