<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="10dp"
    android:animateLayoutChanges="true">

    <View
        android:id="@+id/color_main"
        android:background="@drawable/color_button_orange"
        android:alpha="0.35"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="85dp" />

    <TextView
        android:id="@+id/title"
        app:layout_constraintTop_toTopOf="@+id/color_main"
        app:layout_constraintStart_toStartOf="@+id/color_main"
        android:layout_margin="@dimen/large_margin"
        android:text="@string/title"
        android:textColor="@color/colorBlack"
        android:textSize="@dimen/text_size_big"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/description"
        app:layout_constraintBottom_toBottomOf="@+id/color_main"
        app:layout_constraintStart_toStartOf="@+id/color_main"
        android:layout_margin="@dimen/large_margin"
        android:text="@string/button_to_add"
        android:textSize="@dimen/text_size"
        android:textColor="@color/colorGreyLight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/performance_standard"
        app:layout_constraintTop_toTopOf="@+id/color_main"
        app:layout_constraintEnd_toEndOf="@+id/color_main"
        app:layout_constraintBottom_toBottomOf="@id/color_main"
        android:layout_marginEnd="@dimen/large_margin"
        android:textColor="@color/colorGreyDark"
        android:textSize="@dimen/text_size"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <View
        android:id="@+id/color_support"
        android:background="@drawable/color_button_orange"
        android:alpha="0.35"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/color_main"
        android:layout_width="wrap_content"
        android:layout_height="85dp" />

    <TextView
        android:id="@+id/priority"
        app:layout_constraintTop_toTopOf="@+id/color_support"
        app:layout_constraintStart_toStartOf="@+id/color_support"
        android:layout_margin="@dimen/large_margin"
        android:text="@string/priority"
        android:textColor="@color/colorBlack"
        android:textSize="@dimen/text_size"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/creation_date"
        app:layout_constraintBottom_toBottomOf="@+id/color_support"
        app:layout_constraintStart_toStartOf="@+id/color_support"
        android:layout_margin="@dimen/large_margin"
        android:textColor="@color/colorGreyLight"
        android:text="@string/creation_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/done_dates_counter"
        app:layout_constraintTop_toTopOf="@+id/color_support"
        app:layout_constraintEnd_toEndOf="@+id/color_support"
        app:layout_constraintBottom_toBottomOf="@+id/color_support"
        android:layout_marginEnd="@dimen/large_margin"
        android:textColor="@color/colorGreyDark"
        android:textSize="@dimen/text_size"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/edit_habit_button"
        app:layout_constraintTop_toBottomOf="@id/color_support"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.05"
        android:text="@string/edit_string"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/open_mark_day_button"
        app:layout_constraintTop_toBottomOf="@id/color_support"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintHorizontal_bias="0.95"
        android:text="@string/mark_day_string"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <ImageView
        android:id="@+id/checkmark"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/check_circle_outline"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/color_support"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/edit_habit_button"
        app:layout_constraintBottom_toBottomOf="@+id/edit_habit_button"
        android:contentDescription="@string/checkmark_string" />

</androidx.constraintlayout.widget.ConstraintLayout>