<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingTop="@dimen/large_margin">

    <ImageView
        android:id="@+id/find_habit_by_name_image"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.05"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/find_by_name" />

    <EditText
        android:id="@+id/find_habit_by_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/find_habit_by_name_string"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintTop_toTopOf="@+id/find_habit_by_name_image"
        app:layout_constraintStart_toEndOf="@id/find_habit_by_name_image"
        app:layout_constraintBottom_toBottomOf="@+id/find_habit_by_name_image"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageView
        android:id="@+id/find_habit_by_priority_image"
        app:layout_constraintTop_toBottomOf="@+id/find_habit_by_name_image"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.05"
        android:layout_marginTop="@dimen/large_margin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/find_by_priority"/>

    <Spinner
        android:id="@+id/find_habit_by_priority"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintTop_toTopOf="@id/find_habit_by_priority_image"
        app:layout_constraintBottom_toBottomOf="@id/find_habit_by_priority_image"
        app:layout_constraintStart_toEndOf="@+id/find_habit_by_priority_image"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <View
        android:id="@+id/background_for_buttons"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/colorDeepPurple"
        android:layout_marginTop="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/find_habit_by_priority_image"/>

    <Button
        android:id="@+id/start_filter_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/filter_button_string"
        style="?android:attr/borderlessButtonStyle"
        android:textColor="@color/white"
        app:layout_constraintTop_toTopOf="@+id/background_for_buttons"
        app:layout_constraintStart_toStartOf="@+id/background_for_buttons"
        app:layout_constraintEnd_toStartOf="@+id/cancel_filter_button"
        app:layout_constraintBottom_toBottomOf="@+id/background_for_buttons" />

    <Button
        android:id="@+id/cancel_filter_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel_filter_button"
        style="?android:attr/borderlessButtonStyle"
        android:textColor="@color/white"
        app:layout_constraintStart_toEndOf="@+id/start_filter_button"
        app:layout_constraintEnd_toEndOf="@+id/background_for_buttons"
        app:layout_constraintBottom_toBottomOf="@+id/background_for_buttons"
        app:layout_constraintTop_toTopOf="@+id/background_for_buttons"/>

</androidx.constraintlayout.widget.ConstraintLayout>